# cloudflare-ddns

./: .gitignore  Cargo.toml  README.md  example_config.toml
src/: config.rs  main.rs
systemd/: cloudflare-ddns.service  cloudflare-ddns.timer
