[package]
name = "cloudflare-ddns"
version = "0.1.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.7"
tabled = { version = "0.12", features = ["derive"] }
url = { version = "2", features = ["serde"] }
lettre = { version = "0.10", default_features = false, features = ["serde"] }